--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
-  "python.pythonPath": "~/miniconda3/envs/python_ML/bin/",
-  "python.defaultInterpreterPath": "~/miniconda3/envs/python_ML/bin/",
+  // "python.pythonPath": "~/miniconda3/envs/python_ML/bin/",
+  // "python.defaultInterpreterPath": "~/miniconda3/envs/python_ML/bin/",
+  "python.pythonPath": "~/miniconda3/envs/torch/bin/",
+  "python.defaultInterpreterPath": "~/miniconda3/envs/torch/bin/",
   "editor.minimap.enabled": false,
   "editor.formatOnSave": true,
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": true,
+  "python.linting.pylintArgs": ["--indent-string=\"  \"","--disable=W,W0611,W0631,C0111,E1103"],
   "python.linting.flake8Enabled": false,
-  "python.formatting.provider": "autopep8"
+  "python.formatting.provider": "autopep8",
 }
