--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
   "editor.formatOnSave": true,
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": true,
-  "python.linting.pylintArgs": ["--indent-string=\"  \"","--disable=W,W0611,W0631,C0111,E1103"],
+  "python.linting.pylintArgs": ["--indent-string=\"  \"","--disable=W,W0611,W0631,C0111,E1103,invalid-name"],
   "python.linting.flake8Enabled": false,
   "python.formatting.provider": "autopep8",
 }
